installation composant form

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
-			<link rel="stylesheet" href="https://bootswatch.com/5/vapor/bootstrap.min.css">
+			<link rel="stylesheet" href="https://bootswatch.com/5/solar/bootstrap.min.css">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 		{% endblock %}
 
