--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,24 +3,21 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
-			{% endblock %}
+			{% block title %}Welcome!{% endblock %}
 		</title>
 		{% block stylesheets %}
 			<link rel="stylesheet" href="https://bootswatch.com/5/solar/bootstrap.min.css">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 		{% endblock %}
-
-
 	</head>
 
 	<body>
-
 		{% include "shared/_navbar.html.twig" %}
 
 		<div class="container pt-5"> {% block body %}{% endblock %}
-			</div>
+		</div>
 
 			{% block javascripts %}{% endblock %}
 		</body>
 	</html>
+
