--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -15,7 +15,7 @@
 					<div class="card-body">
 						<h4 class="card-title">{{ p.name }} ({{ p.price / 100 }} &euro;)</h4>
 
-						<span class="badge badge-info"> {{ p.category.name }}</span>
+						<span class="badge bg-danger"> {{ p.category.name }}</span>
 						
 						<p class="card-flex">{{ p.shortDescription }}</p>
 						<a href="{{ path('product_show', {'category_slug': p.category.slug, 'slug': p.slug}) }}" class="btn btn-info btn-sm">Détails</a>
